--- a/index.html
+++ b/index.html
@@ -8,6 +8,10 @@
 </head>
 <body>
     <div class="container" id="boxContainer"></div>
+    <div id="gameContainer" class="hidden">
+        <canvas id="gameCanvas"></canvas>
+        <button id="restartBtn">Restart Game</button>
+    </div>
     <script src="script.js"></script>
 </body>
 </html>
