--- a/index.html
+++ b/index.html
@@ -3,14 +3,14 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Game Boxes</title>
+    <title>Dino Game</title>
     <link rel="stylesheet" href="styles.css">
 </head>
 <body>
     <div class="container" id="boxContainer"></div>
     <div id="gameContainer" class="hidden">
         <canvas id="gameCanvas"></canvas>
-        <button id="restartBtn">Restart Game</button>
+        <button id="restartBtn" class="hidden">Restart Game</button>
     </div>
     <script src="script.js"></script>
 </body>
